--- a/node/views/login.handlebars
+++ b/node/views/login.handlebars
@@ -2,42 +2,11 @@
 
 <html>
 
-    <head>
-
-        <title>Hardware Exchange</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <link href="../css/style.css" rel="stylesheet" type="text/css">
-        <link href="../css/queries.css" rel="stylesheet" type="text/css">
-        
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="../js/script.js"></script>
-        
-    </head>
+    {{> head}}
 
     <body>
 
-        <header>
-            
-            <nav class="black-background">
-                
-                <div class="row">
-                    
-                    <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
-                    <ul class="main-nav">
-                        <li><a href="/login">Log in</a></li>
-                        <li><a href="/register">Register</a></li>
-                        <li><div class="hamburger-menu"></div></li>
-                    </ul>   
-    
-                </div>
-
-            </nav>
-            
-        </header>
+        {{> header}}
         
         <section class="login-user">
             
