Changed design of front page button and CSS

--- a/node/views/index.handlebars
+++ b/node/views/index.handlebars
@@ -5,42 +5,25 @@
     {{> head}}
 
     <body>
+        
+        {{> header}}
 
-        <header class="header">      
-            
-            <nav class="fullimg-navbar">
-                
-                <div class="row">
-                    
-                    <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
-
-                    <ul class="main-nav">
-                        <li><a href="/register">Register</a></li>
-                        <li><a href="/login">Log in</a></li>
-                        <li><div class="hamburger-menu"></div></li>
-                    </ul>   
-    
-                </div>
-
-            </nav>
-            
-                
+        <div class="background-image">
             <div class="row">
-                <div class="search-wrapper">
-                    <input type="text" placeholder="Find hardware" class="search-box" required>
-                    <div class="sub-btn"><button><img src="img/icons/search.svg"></button></div>
+                <div class="sub-btn large-btn">
+                    <button><a href="/register">Register for an account now!</a></button>
                 </div>
             </div>
-            
-        </header>
+        </div>
         
-        
+
+
+
         <div class="row"><h2>Recent Additions</h2></div>
         
 
         <section class="images">
             <div class="row" id="elem"></div>
-
         </section> 
 
 
