--- a/node/views/partials/header.handlebars
+++ b/node/views/partials/header.handlebars
@@ -2,7 +2,7 @@
 
     <header>
         
-            <nav class="black-background">
+            <nav>
             
                 <div class="row">
                 
