--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -27,18 +27,21 @@ body {
 
 ul {list-style: none;}
 
-a {text-decoration: none; }
+a {
+    text-decoration: none; 
+    color: white;
+}
 
 
 /* -------- Headers -------- */
 
 
-.header {
+.background-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/logo.JPG");
     background-size: cover;
     height: 100vh;
     position: relative;
-    
+    margin-top: -118px;
 }
 
 h1 {
@@ -64,10 +67,18 @@ h2 {
 
 /* Lower main nav bar for index page & pages with full screen image */
 
-.fullimg-navbar {padding-top: 30px; }
+nav .row {
+    z-index: 1;
 
+}
 
+header .row {
+    position: relative;
+}
 
+.fullimg-navbar {
+    padding-top: 30px;
+}
 
 /* -------- Reusable parts -------- */
 
@@ -147,71 +158,46 @@ nav .row {padding: 20px 0; }
 
 
 
-/* 
-    ===============
-    Main page stuff
-    ===============
-*/
-
-
-
 /* -------- Buttons -------- */
 
 
-/* -------- Search box info -------- */
+/* ** sub-btn (call to action) settings ** */
 
-header .row {
-    position: relative;
-}
-
-.search-box {
-    height: 100%;
-    width: calc(100% - 54px);
-    padding: 17.5px 10px;
-}
-
-header > .row:last-of-type {
+.sub-btn { /* container for buttons */
     position: absolute;
-    bottom: 250px;
-    margin: 0 auto;
-    left: 50%;
-    transform: translate(-50%);
+    display: inline-block;
+    height: auto; 
 }
 
-.search-wrapper {
-    box-shadow: 2.5px 2.5px 1.25px #222;
-}
-
-
-header .search-box {
-    float: left;
-    
-}
-
-.header .sub-btn, button {
-    height: 54px;
-    width: 54px;
+.sub-btn button { /* actual button contained by the sub-btn class */
+    border-radius: 20px;
     background-color: #e07519;
+    color: white;
     border: none;
+    padding: 15px;
+    width: 100%;
+    height: 100%;
+    font-size: 100%;
     cursor: pointer;
 }
 
-.sub-btn img {
-    transform: scale(0.8);
-    transition: transform 0.3s;
+.large-btn { /* larger button for homepage */
+    width: auto;
+    top: 70vh;
+    margin-left: 50%;
+    transform: translate(-50%, 0);
 }
 
-.sub-btn img:hover {
-    transform: scale(0.95);
+.sub-btn.large-btn button {
+    box-shadow: 5px 5px 5px #000;
+    padding: 25px 17.5px;
+    font-size: 110%;
+    transition: transform 0.3s;
+    font-weight: 400;
 }
 
-.large-btn {
-    width: 75px;
-    height: 75px;
-    border: none;
-    background-color: #e07519;
-    transition: transform 0.3s;
-    cursor: pointer;
+.sub-btn.large-btn button:hover {
+    transform: scale(1.15);
 }
 
 .circle-btn {
@@ -222,11 +208,6 @@ header .search-box {
     position: absolute; 
     top: 12px;
     right: 60px;
-}
-
-.search-wrapper {
-    transform: translate(-50%, 0);
-    margin-left: 50%;
 }
 
 
@@ -283,20 +264,8 @@ header .search-box {
     margin-top: 10%;
 }
 
-/* -------- Call to action button -------- */
+/* -------- Inputs -------- */
 
-
-
-.sub-btn {
-
-    display: block;
-    color: white;
-    transition: transform 0.3s;
-    overflow: hidden;
-
-}
-
-.sub-btn input {float: right; }
 
 input[type=submit] {
     
@@ -313,8 +282,6 @@ input[type=submit] {
 input[type=submit]:hover {
     transform: scale(1.15);
 }
-
-
 
 /* 
     ===========================================
@@ -448,18 +415,6 @@ input[type=submit]:hover {
     padding: 15px;
     width: 640px;
     height: 300px;
-}
-
-/* 
-
-    =======================
-    Other effects for items 
-    =======================
-
-*/
-
-.large-btn:hover {
-    transform: scale(1.15);
 }
 
 
