--- a/node/views/partials/header.handlebars
+++ b/node/views/partials/header.handlebars
@@ -11,7 +11,7 @@
                     <ul class="main-nav">
                         <li><a href="/login">Log in </a></li>
                         <li><a href="/register">Register</a></li>
-                        <li><div class="hamburger-menu"></div></li>
+                        <li><div class="hamburger-menu enlarge"></div></li>
                     </ul>   
  
                 </div>
