--- a/node/views/account.handlebars
+++ b/node/views/account.handlebars
@@ -12,9 +12,9 @@
 
             <div class="row">
 
-                <div class="header-box">
+                <div class="center-box">
                     <div class="icon-box"></div>
-                    <h1 id="accountName"></h1>
+                    <h1 id="accountName" class="centered"></h1>
                 </div>
 
                 <div class="info-box">
@@ -36,7 +36,7 @@
         <section id="added-items">
 
             <div class="row">
-                <h2>Your items</h2>
+                <h2 class="centered">Your items</h2>
                 <div class="btn-holder med-btn"><button class="circle-btn img-btn enlarge" onclick="document.location.href='/addItem'"><img src="img/icons/add-item.svg"></button></div>
             </div>
 
