--- a/node/views/addItem.handlebars
+++ b/node/views/addItem.handlebars
@@ -11,7 +11,7 @@
         
         <div class="center-box">
 
-            <h2>Add item</h2>
+            <div class="center-box"><h1 class="centered">Add item</h1></div>
 
             <!-- the form to add the item to the server -->
 
