--- a/node/views/added-item.handlebars
+++ b/node/views/added-item.handlebars
@@ -1,2 +1,24 @@
-this is a test of the site once the items have been added
-<a href="/account">go back to the account page</a>
+<!DOCTYPE html>
+
+<html>
+    {{> head}}
+
+    <body>
+
+        {{> header}}
+
+        <div class="row">
+            <div class="center-box">
+
+                <h1>Your item has been added.<br /><br /><br /></h1>
+                <p><a class="text-link" href="/">Return to the homepage</a> or view your item.</p>
+
+            </div>
+        </div>
+
+
+    </body>
+
+
+
+</html>
