--- a/node/views/index.handlebars
+++ b/node/views/index.handlebars
@@ -6,20 +6,20 @@
 
     <body>
         
-        {{> header}}
+        {{> img-header}}
 
-        <div class="background-image">
+        <!--<div class="background-image">
             <div class="row">
                 <div class="sub-btn large-btn homepg-btn">
                     <button class="enlarge"><a href="/register">Register for an account now!</a></button>
                 </div>
             </div>
-        </div>
+        </div>-->
         
 
 
 
-        <div class="row"><h2>Recent Additions</h2></div>
+        <div class="center-box"><h2 class="centered">Recent Additions<br /><br /></h2></div></div>
         
 
         <section class="images">
