--- a/node/views/login.handlebars
+++ b/node/views/login.handlebars
@@ -10,28 +10,35 @@
         
         <section class="login-user">
             
-            
             <div class="center-box">
-                <div><h2>Log in</h2></div>
-                <form method="post" action="/login">
+
+                <div class="center-box"><h1 class="centered">Log in<br/><br/></h1></div>
+
+                <div class="center-box">
+
+                    <form method="post" action="/login">
                     
                     <div class="input-box">
                         <p>Email:</p>                   
                         <input type="email" name="email" required>
                     </div>
+
                     <div class="input-box">
                         <p>Password:</p>                    
                         <input type="password" name="passwd" required>
                     </div>
+
                     <div id="msg"></div>
+                    <br />
                     <div class="input-box sub-btn">
                         <input type="submit" value="Log in">
                     </div>
                     
-                </form>
+                    </form>
+
+                </div>
                 
             </div>
-        
         
         
         </section>
