--- a/node/views/partials/head.handlebars
+++ b/node/views/partials/head.handlebars
@@ -9,7 +9,7 @@
     <link href="../css/queries.css" rel="stylesheet" type="text/css">
     
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/script.js"></script>
