--- a/node/views/partials/img-header.handlebars
+++ b/node/views/partials/img-header.handlebars
@@ -1,23 +1,37 @@
 <!-- header for the top of the page -->
 
     <header>
-        
+
+        <div class="background-image">
+
             <nav>
             
                 <div class="row">
                 
                     <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
-                    
-
+                      
                     <ul class="main-nav">
                         <li><a href="/login">Log in </a></li>
                         <li><a href="/register">Register</a></li>
-                        <div class="hamburger-menu enlarge"></div>                        
-                    </ul>
+                        <div class="hamburger-menu enlarge"></div>
+                    </ul> 
+
                 </div>
 
-                 
+                
 
             </nav>
+
+            <div class="centre-box">
+
+                <div class="sub-btn large-btn homepg-btn">
+                    <button class="enlarge"><a href="/register">Register for an account now!</a></button>
+                </div>
+
+            </div>
+
+        </div>
+        
+            
         
     </header>
