--- a/node/views/thanks.handlebars
+++ b/node/views/thanks.handlebars
@@ -1,1 +1,24 @@
-THANKS
+<!DOCTYPE html>
+
+<html>
+
+{{> head}}
+
+<body>
+    {{> header}}
+
+    <div class="row">
+        <div class="center-box">
+            <h1>Thanks for signing up!<br /><br /><br /></h1>
+            <p>Get started by <a class="text-link" href="addItem">adding a component</a>, or <a class="text-link">view your profile</a>.</p>
+        </div>
+    </div>
+
+
+
+
+</body>
+
+
+
+</html>
