Increased usability on mobile platforms

--- a/node/views/account.handlebars
+++ b/node/views/account.handlebars
@@ -37,7 +37,7 @@
 
             <div class="row">
                 <h2 class="centered">Your items</h2>
-                <div class="btn-holder med-btn"><button class="circle-btn img-btn enlarge" onclick="document.location.href='/addItem'"><img src="img/icons/add-item.svg"></button></div>
+                <div class="btn-container med-btn right top"><button class="circle-btn img-btn enlarge" onclick="document.location.href='/addItem'"><img src="img/icons/add-item.svg"></button></div>
             </div>
 
             <div class="row item-holder" id="elem"></div> 
