--- a/node/views/login.handlebars
+++ b/node/views/login.handlebars
@@ -30,7 +30,7 @@
 
                     <div id="msg"></div>
                     <br />
-                    <div class="input-box sub-btn">
+                    <div class="input-box btn-container">
                         <input type="submit" value="Log in">
                     </div>
                     
