--- a/node/views/partials/img-header.handlebars
+++ b/node/views/partials/img-header.handlebars
@@ -22,13 +22,15 @@
 
             </nav>
 
-            <div class="centre-box">
 
-                <div class="sub-btn large-btn homepg-btn">
-                    <button class="enlarge"><a href="/register">Register for an account now!</a></button>
+
+            <div class="btn-container center-box">
+                <div class="centered">
+                    <button class="enlarge largepad"><a href="/register">Register for an account now!</a></button>
                 </div>
-
             </div>
+
+
 
         </div>
         
