--- a/node/public/css/queries.css
+++ b/node/public/css/queries.css
@@ -11,6 +11,8 @@
 
 @media only screen and (max-width: 1139px) and (min-width: 768px) {
 
+    .center-box {width: 60%; }
+
     .header-box h1 {font-size: 180%; }
     
     .row {width: 100%; }
@@ -70,6 +72,10 @@
         font-size: 180%;
     }
 
+    .center-box {
+        width: 65%;
+    }
+
 }
 
 
@@ -90,7 +96,6 @@
 
     .row {
         width: 100%;
-        /*padding: 15px 0;*/
     }
 
 
@@ -116,14 +121,15 @@
         
         z-index: 1;
         padding: 15px 0;
-        background: rgba(0, 0, 0, 0.75);
         
     }
+
 
     .main-nav {
         transform: translate(0, 0); 
 
     }
+
 
     .main-nav li {
 
@@ -131,45 +137,30 @@
         margin: 0;
     }
 
+
     .main-nav.nav-active {
-        background-color: #393939;
+
         margin-top: 15px;
     }
 
 
     .main-nav.nav-active li a {
-        display: block;
         padding: 15px;
+        float: right;
+        clear: both;
+        margin-right: 15px;
+        transition: transform 0.3s;
+        font-size: 90%;
     }
 
     .main-nav.nav-active li a:hover {
-        background-color: #535353;
-
+        transform: scale(1.15);
     }
+    
 
     .main-nav.nav-active .hamburger-menu {
-        top: -39%;
+        top: -48%;
     }
-
-    /* -------- Mobile navigation - hamburger menu -------- */
-
-
-
-    .hamburger-menu {
-
-        display: block;
-        position: absolute;
-        width: 40px;
-        height: 40px;
-        top: 20%;
-        right: 0;
-        cursor: pointer;    
-        transition: transform 0.3s;
-        background-image: url('../img/icons/menu.svg');
-        
-    }
-
-    .hamburger-menu:hover {transform: scale(1.15); }
 
 
     /* -------- containers for item displays -------- */
@@ -197,6 +188,10 @@
 
     .box {font-size: 90%; }
 
+    .center-box {
+        width: 70%;
+    }
+
 
     /* -------- Size of the text area on smaller screens -------- */
 
@@ -220,7 +215,7 @@
 
 
 /* -----------------------------------------------------------------
-   Minor adjustments for very small screens, such as those on phones
+   Adjustments for very small screens, such as those on phones
    ----------------------------------------------------------------- */
 
 
@@ -228,9 +223,53 @@
 
 @media only screen and (max-width: 648px) {
 
-    .input-box p {
-        float: none;
-        margin-bottom: 15px;
+    /*
+    ========
+    Headings 
+    ========
+    */
+
+
+
+    h1 {
+        font-size: 140%;
+        margin-bottom: 50px;
+    }
+
+    h2 {
+        font-size: 120%;
+    }
+
+    
+
+    #page-header-text a {
+
+        font-size: 115%;
+
+    }
+
+    #added-items .row:first-of-type {
+        margin-bottom: 40px;
+    }
+
+    #account-details .row:first-of-type {margin-bottom: 30px; }
+
+    /* 
+    
+    ============================
+    Box sizing for small screens
+    ============================
+    
+    */
+
+
+
+    .background-image .btn-container.center-box {
+        position: absolute;
+        bottom: 125px;
+        right: 8.75%;
+        transform: scale(1.2);
+
     }
 
     .box {
@@ -238,19 +277,129 @@
         display: block;
     }
 
+    .center-box {
+        width: 80%;
+        margin-left: 20%;
+        transform: translate(-10%);
+    }
+
     .info-box {
         border-top: 1px solid #a5a5a5;
+        border-bottom: 1px solid #a5a5a5;
         padding: 25px 0;
+        margin-bottom: 10px;
     }
+
     .info-box div {
         display: block;
-        margin-bottom: 40px;
+        margin: 20px 0 20px 0; 
     }
 
     .info-box div:last-of-type {
         float: none;
         margin-top: 25px;
     }
+
+    .input-box {
+        width: 100%;
+        height: auto;
+    }
+
+   .input-box p {
+        font-size: 90%;
+        float: none;
+        margin-bottom: 15px;
+    }
+
+    .input-box.sub-btn {
+        right: 0;
+    }
+
+
+
+    /*
+
+    =============
+    Button sizing
+    =============
+
+    */
+
+
+
+    .med-btn {
+        width: 45px;
+        height: 45px;
+    }
+
+    .sub-btn {
+        width: 70%;
+        height: 80px;
+    }
+
+    .sub-btn button a {
+        font-size: 65%;
+        font-weight: 600;
+    }
+
+    .sub-btn.large-btn button {
+        padding: 10px;
+    }
+
+
+
+    /*
+
+    ===========
+    Input boxes
+    ===========
+
+    */
+
+
+
+    .input-box textarea {
+        width: 100%;
+        height: 360px;
+    }
+
+    @media only screen and (max-width: 400px ) {
+
+        .item-view {
+        
+            transform: scale(0.8);
+            margin-left: 10%;
+            margin-bottom: 25px;
+        }
+
+    }
+
+    /*
+    
+    ======
+    Images
+    ======
+    
+    */
+
+
+
+    .img-btn {
+        width: 35px;
+        height: 35px;
+        margin-top: 14.5px;
+    }
+
+
+    /*
+
+    ==========
+    Properties
+    ==========
+
+    */
+
+
 
 
 
