--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -44,7 +44,16 @@ button {
     transition: transform 0.3s;
 }
 
-/* -------- Headers -------- */
+
+
+/* 
+
+    =======
+    Headers 
+    =======
+
+*/
+
 
 
 .background-image {
@@ -74,28 +83,87 @@ h3 {
     font-weight: 100;
 }
 
+
 /* text links */
+
 
 .text-link {
     color: #e07519;
     transform: scale(1.1);
 }
 
+
 .text-link:hover {
     transition: transform 0.3s;
 }
 
+
+
 /* black background for pages that use it */
+
 
 .black-background {background-color: #000; }
 
+
 /* Lower main nav bar for index page & pages with full screen image */
+
 
 nav .row {z-index: 1; }
 
 header .row {position: relative; }
 
-.fullimg-navbar {padding-top: 15px; }
+.fullimg-navbar::before {
+    content: '';
+    display: block;
+    padding-top: 30px;
+
+}
+
+
+
+/*
+
+    ==========
+    Containers
+    ==========
+
+*/
+
+
+
+/* button containers */
+
+.btn-holder {
+    position: absolute; 
+    top: 12px;
+    right: 60px;
+}
+
+.center-box {
+
+    margin-left: 50%;
+    transform: translate(-50%);
+
+}
+
+.btn-container {
+
+
+    position: absolute;
+    display: inline-block;
+    height: auto; 
+    width: auto;
+}
+
+.med-btn {
+    width: 75px;
+    height: 75px;
+}
+
+.largepad {
+    padding: 20px 12px;
+    border-radius: 30px;
+}
 
 
 
@@ -194,12 +262,16 @@ nav .row {padding: 20px 0; }
 /* -------- Mobile Navigation -------- */
 
 .hamburger-menu {
+
+    display: block;
+    position: absolute;
     width: 40px;
-    height: auto;
-    float: right;
-    margin-right: 30px;
-    cursor: pointer;
+    height: 40px;
+    top: -5px;
+    right: 30px;
+    cursor: pointer;    
     transition: transform 0.3s;
+    background-image: url('../img/icons/menu.svg');
     
 }
 
@@ -213,78 +285,22 @@ nav .row {padding: 20px 0; }
 
 
 
-/* sub-btn (call to action) settings */
-
-.sub-btn {
-    /* container for buttons */
-    position: absolute;
-    display: inline-block;
-    height: auto; 
-    width: auto;
-}
-
 .sub-btn button {
+
     /* actual button contained by the sub-btn class */
+
     border-radius: 20px;
     color: white;
     width: 100%;
     height: 100%;
+    padding: 10px;
     font-size: 100%;
 }
+
 .sub-btn img {
+
     width: 40px;
     height: 40px;
-}
-
-/* larger button for homepage */
-
-.large-btn { 
-    width: auto;
-    margin-left: 50%;
-    transform: translate(-50%, 0);
-}
-
-.homepg-btn {
-    bottom: 120px;
-}
-
-.homepg-btn button {
-    box-shadow: 0 3px 2.5px #000;
-}
-
-.sub-btn.large-btn button {
-    padding: 25px 17.5px;
-    font-size: 110%;
-    transition: transform 0.3s;
-    font-weight: 400;
-}
-
-.large-btn img {
-    width: 100%;
-    height: 100%;
-}
-
-/* other button properties */
-
-.circle-btn {border-radius: 50%; }
-
-.img-btn {width: 100%; height: 100%; }
-
-/* sizes of button */
-
-.med-btn {
-    width: 75px;
-    height: 75px;
-}
-
-.btn-holder {
-    position: absolute; 
-    top: 12px;
-    right: 60px;
-}
-
-.enlarge:hover {
-    transform: scale(1.15);
 }
 
 
@@ -370,6 +386,16 @@ input[type=submit]:hover {
 }
 
 
+/* Text box */
+
+
+.input-box textarea {
+    padding: 15px;
+    width: 100%;
+    height: 300px;
+}
+
+
 
 /* 
     ===========================================
@@ -426,10 +452,6 @@ input[type=submit]:hover {
     display: inline-block;
 }
 
-.comp-type {
-    float: right;
-}
-
 
 
 /*
@@ -482,29 +504,6 @@ input[type=submit]:hover {
     overflow: visible;
 }
 
-.center-box {
-
-    margin-left: 50%;
-    transform: translate(-50%);
-
-}
-
-
-
-/* 
-    =============
-    Add item form
-    ============= 
-
-*/
-
-
-
-.input-box textarea {
-    padding: 15px;
-    width: 100%;
-    height: 300px;
-}
 
 
 
@@ -520,6 +519,17 @@ input[type=submit]:hover {
     text-align: center;
 }
 
+.enlarge:hover {
+    transform: scale(1.15);
+}
+
+.circle-btn {border-radius: 50%; }
+
+.img-btn {width: 100%; height: 100%; }
+
+.right {right: 60px; }
+
+.top {top: 12px; }
 
 
 /* 
