--- a/node/views/partials/head.handlebars
+++ b/node/views/partials/head.handlebars
@@ -3,13 +3,15 @@
 <head>
 
     <title>Hardware Exchange</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     
     <link href="../css/style.css" rel="stylesheet" type="text/css">
     <link href="../css/queries.css" rel="stylesheet" type="text/css">
     
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css", rel="stylesheet", type="text/css">
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../js/script.js"></script>
