--- a/node/views/register.handlebars
+++ b/node/views/register.handlebars
@@ -32,7 +32,7 @@
                     </div>
                     <div id="msg"></div>
                     <br/>
-                    <div class="input-box sub-btn">
+                    <div class="input-box btn-container">
                         <input type="submit" value="Sign up!">
                     </div>
                     
