--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -161,9 +161,11 @@ header .row {position: relative; }
 }
 
 .largepad {
-    padding: 20px 12px;
+    padding: 37.5px 35px;
     border-radius: 30px;
+    font-size: 125%;
 }
+
 
 
 
@@ -208,8 +210,6 @@ header .row {position: relative; }
 
 .orange {color: #e07519; }
 
-.hamburger-menu {display: none; }
-
 
 
 /*
@@ -234,7 +234,7 @@ nav .row {padding: 20px 0; }
 .main-nav li {
     
     float: right;
-    margin: 0 40px;
+    margin: 0 120px;
 }
 
 .main-nav li a {
@@ -301,6 +301,11 @@ nav .row {padding: 20px 0; }
 
     width: 40px;
     height: 40px;
+}
+
+.background-image .btn-container.center-box {
+    position: absolute;
+    bottom: 250px;
 }
 
 
